# chord

./: CMakeLists.txt  README.md  conanfile.py
chord_agent/: CMakeLists.txt
chord_agent/include/chord_agent/: machine_process.h  machine_supervisor.h
chord_agent/src/: agent_service.cpp  chord_agent.cpp  machine_supervisor.cpp  main.cpp
chord_agent/test/: CMakeLists.txt  machine_process_tests.cpp  machine_supervisor_tests.cpp  test_mocks.h
chord_invoke/share/: invoke_service.proto
chord_local_machine/: CMakeLists.txt
chord_local_machine/include/chord_local_machine/: abstract_message_sender.h  async_processor.h  async_queue.h  chord_local_machine.h  component_constructor.h  config_utils.h  grpc_binder.h  initialize_utils.h  interpreter_runner.h  local_machine.h  port_socket.h  remoting_service.h  run_protocol_socket.h  run_utils.h
chord_local_machine/src/: async_processor.cpp  async_queue.cpp  chord_local_machine.cpp  component_constructor.cpp  config_utils.cpp  grpc_binder.cpp  initialize_utils.cpp  interpreter_runner.cpp  local_machine.cpp  main.cpp  port_socket.cpp  remoting_service.cpp  run_protocol_socket.cpp  run_utils.cpp
chord_local_machine/test/: CMakeLists.txt  async_processor_tests.cpp  async_queue_tests.cpp  initialize_utils_tests.cpp  local_machine_tests.cpp  test_mocks.h
chord_protocol/: CMakeLists.txt
chord_protocol/include/chord_protocol/: protocol_types.h
chord_protocol/src/: protocol_types.cpp
chord_remoting/share/: remoting_service.proto
chord_sandbox/include/chord_sandbox/: chord_isolate.h  grpc_connector.h  remote_machine.h  (+2 more)
chord_sandbox/src/: chord_isolate.cpp  grpc_connector.cpp  remote_machine.cpp  remoting_client.cpp
chord_sandbox/test/: chord_isolate_tests.cpp  client_communication_stream_tests.cpp  machine_utils_tests.cpp
chord_test/: CMakeLists.txt  tester.config.in
chord_test/include/chord_test/: chord_sandbox_tester.h  test_result.h
chord_test/src/: chord_sandbox_tester.cpp
cmake/: chord-config.cmake.in
examples/demo/: CMakeLists.txt  workspace.config.in
lib/: CMakeLists.txt
lib/chord_common/: CMakeLists.txt
lib/chord_common/include/chord_common/: abstract_certificate_signer.h  abstract_protocol_handler.h  abstract_protocol_writer.h  common_conversions.h  common_types.h  grpc_status.h  protocol_types.h  transport_location.h
lib/chord_common/src/: common_conversions.cpp  common_types.cpp  grpc_status.cpp  protocol_types.cpp  transport_location.cpp
lib/chord_invoke/: CMakeLists.txt
lib/chord_invoke/share/: invoke_service.proto
lib/chord_mesh/: CMakeLists.txt
lib/chord_mesh/include/chord_mesh/: abstract_mesh_network.h  connect.h  envelope.h  flood.h  handshake.h  mesh_result.h  message.h  noise.h  rep_protocol.h  req_protocol.h  stream.h  stream_acceptor.h  stream_buf.h  stream_connector.h  stream_io.h  stream_manager.h  stream_session.h  supervisor_node.h
lib/chord_mesh/share/: ensemble_events.capnp  ensemble_messages.capnp  stream_messages.capnp
lib/chord_mesh/src/: connect.cpp  envelope.cpp  flood.cpp  handshake.cpp  mesh_result.cpp  message.cpp  noise.cpp  rep_protocol.cpp  req_protocol.cpp  stream.cpp  stream_acceptor.cpp  stream_buf.cpp  stream_connector.cpp  stream_io.cpp  stream_manager.cpp  stream_session.cpp  supervisor_node.cpp
lib/chord_mesh/test/: CMakeLists.txt  base_mesh_fixture.cpp  base_mesh_fixture.h  cipher_tests.cpp  envelope_builder_tests.cpp  envelope_parser_tests.cpp  flood_mesh_tests.cpp  handshake_tests.cpp  insecure_stream_tests.cpp  message_builder_tests.cpp  message_parser_tests.cpp  message_tests.cpp  rep_protocol_tests.cpp  req_protocol_tests.cpp  secure_stream_tests.cpp  stream_acceptor_tests.cpp  stream_connector_tests.cpp  stream_io_tests.cpp  test_messages.capnp  test_mocks.h
lib/chord_protocol/: CMakeLists.txt
lib/chord_protocol/include/chord_protocol/: abstract_protocol_handler.h  abstract_protocol_writer.h
lib/chord_remoting/: CMakeLists.txt
lib/chord_remoting/share/: remoting_service.proto
lib/chord_sandbox/: CMakeLists.txt
lib/chord_sandbox/include/chord_sandbox/: abstract_endpoint_signer.h  chord_isolate.h  grpc_connector.h  local_certificate_signer.h  local_endpoint_signer.h  remote_machine.h  remoting_client.h  run_protocol_plug.h  sandbox_result.h  sandbox_types.h
lib/chord_sandbox/include/chord_sandbox/internal/: machine_utils.h  session_utils.h  spawn_utils.h
lib/chord_sandbox/src/: chord_isolate.cpp  grpc_connector.cpp  local_certificate_signer.cpp  local_endpoint_signer.cpp  remote_machine.cpp  remoting_client.cpp  run_protocol_plug.cpp  sandbox_result.cpp  sandbox_types.cpp
lib/chord_sandbox/src/internal/: machine_utils.cpp  session_utils.cpp  spawn_utils.cpp
lib/chord_sandbox/test/: CMakeLists.txt  chord_isolate_tests.cpp  client_communication_stream_tests.cpp  machine_utils_tests.cpp  spawn_utils_tests.cpp
lib/chord_sandbox/test/data/: CMakeLists.txt
lib/chord_test/: CMakeLists.txt
lib/chord_tooling/: CMakeLists.txt
lib/chord_tooling/include/chord_tooling/: agent_store.h  chord_config.h  security_config.h  signer_store.h  tooling_conversions.h  tooling_result.h  zone.h  zone_config.h
lib/chord_tooling/src/: agent_store.cpp  chord_config.cpp  security_config.cpp  signer_store.cpp  tooling_conversions.cpp  tooling_result.cpp  zone.cpp  zone_config.cpp
meta/: description  license  url
pkg/: CMakeLists.txt
pkg/dev.zuri_net/: CMakeLists.txt  tester.config.in
pkg/dev.zuri_net/http/: CMakeLists.txt  lib_config.h.in
pkg/dev.zuri_net/http/assembly/: compile_manager.cpp  compile_manager.h  compile_response.cpp  compile_response.h  lib_builder.cpp
pkg/dev.zuri_net/http/include/zuri_net_http/: lib_types.h
pkg/dev.zuri_net/http/plugin/: curl_headers.cpp  curl_headers.h  curl_utils.cpp  curl_utils.h  manager_ref.cpp  manager_ref.h  plugin.cpp  plugin.h
pkg/dev.zuri_net/http/test/: CMakeLists.txt  manager_tests.cpp
share/: CMakeLists.txt
share/examples/demo/: CMakeLists.txt  workspace.config.in
share/examples/demo/src/: helloworld.ly
share/examples/demo/test/: CMakeLists.txt  helloworld_tests.cpp
(+12 files in other folders)
